⛄️🚊 Checkpoint ./public/static/textwall.js:65718371/95 ./public/index.html:65718371/136 ./public/static/textwall.css:65718371/487

--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,10 @@
             <td>CTRL+U</td>
           </tr>
           <tr>
+            <td><u>Overline</u> text</td>
+            <td>CTRL+2</td>
+          </tr>
+          <tr>
             <td><s>Strikethrough</s> text</td>
             <td>CTRL+S</td>
           </tr>
@@ -150,6 +154,7 @@
       </div>
     </div>
     <div id="usermenu" class="hidden">
+      <hr>
         <div id="chat" class="hidden">
       <div class="buttoncontainer hidden">
         <div id="chatbutton">
