🌛🐚 Checkpoint ./public/index.html:65718371/24756 ./public/static/textwall.css:65718371/1262

--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,14 @@
       </div>
     </div>
     <div id="usermenu" class="hidden">
+      <div id="settingstabs" class="tabs">
+						<div class="tab active" id="settings-tab" data-panel="settings-panel">Settings</div>
+						<div class="tab" id="explore-tab" data-panel="explore-panel">Explore</div>
+						<div class="tab" id="account-tab" data-panel="account-panel">Account</div>
+						<div class="tab" id="chat-tab" data-panel="chat-panel">Chat</div>
+						<div class="tab hidden" id="wall-settings-tab" data-panel="wall-settings-panel">Wall Settings</div>
+						<div class="tab hidden" id="admin-tab" data-panel="admin-panel">Admin</div>
+					</div>
       <hr>
         <div id="chat" class="hidden">
       <div class="buttoncontainer hidden">
