👀🍠 Checkpoint ./public/index.html:65718371/646

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,7 @@
         </table>
       </div>
     </div>
+    <div id="usermenu" class="hidden">
       <div id="optionsmenu">
       <div id="settingstabs" class="tabs">
 						<div class="tab active" id="settings-tab" data-panel="settings-panel">Settings</div>
@@ -592,14 +593,6 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
             value="💨"
           /><br />
           <table id="admintable">
-            <button onclick="
-            let userMute = prompt(&quot;What user would you mute?&quot;)
-            let muteDuration = parseInt(prompt(&quot;For how long?&quot;))
-            if (userMute === client.id) addChat(&quot;[SYSTEM]&quot;, 0b101, &quot;Why mute yourself?&quot;, true, 0)
-            if (muteDuration > 0) addChat(&quot;[SYSTEM]&quot;, 0b101, &quot;Muted &quot; + userMute + &quot; for &quot; + muteDuration + &quot; seconds.&quot;, true, 0)
-                             " id="mute">
-              Mute
-            </button>
           </table>
         </div>
       </div>
