Rewound to commit f980848530a6fc81c9ee129803e23a9280c17a2e + 0 edits

--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
         </table>
       </div>
     </div>
-    <div id="chat">
+    <div id="chat" class="hidden">
       <div class="buttoncontainer">
         <div id="chatbutton">
           <img alt="chat" class="button" src="/static/chat.svg" />
@@ -169,7 +169,7 @@
         </div>
       </div>
     </div>
-    <div id="usermenu">
+    <div id="usermenu" class="hidden">
       <div id="optionsmenu">
         <h1>Options</h1>
         <input id="showothercurs" type="checkbox" /><label for="showothercurs"
