🛍🎱 Checkpoint ./public/index.html:65718371/15

--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
         </div>
       </div>
     </div>
-    <div id="usermenu" class="hidden">
+    <div id="usermenu">
       <div id="optionsmenu">
         <h1>Options</h1>
         <input id="showothercurs" type="checkbox" /><label for="showothercurs"
