🎊🚋 Checkpoint ./public/index.html:65718371/139

--- a/public/index.html
+++ b/public/index.html
@@ -135,6 +135,10 @@
             <td>CTRL+U</td>
           </tr>
           <tr>
+            <td><o>Overline</o> text</td>
+            <td>CTRL+2</td>
+          </tr>
+          <tr>
             <td><s>Strikethrough</s> text</td>
             <td>CTRL+S</td>
           </tr>
