👣🍱 Checkpoint ./public/static/textwall.js:65718371/118 ./public/index.html:65718371/4 ./public/static/textwall.css:65718371/5319

--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
         </div>
       </div>
       <div class="chatcontainer">
-        <div id="chatbox"></div>
+        <div id="chatbox"><hr></div>
         <div class="msgcontainer">
           <input
             maxlength="400"
