🗺🚗 Checkpoint ./public/mail.html:65718371/3 ./public/static/textwall.css:65718371/188372 ./public/static/textwall.js:65718371/2562

--- a/public/mail.html
+++ b/public/mail.html
@@ -9,7 +9,7 @@
         got a bug report and can't
         <a href="https://discord.gg/fctwf5mSd6">join the discord</a>? MAIL IT
         HERE<br />
-        got a idea/suggestion? MAIL IT HERE<br />
+        got a(n) idea/suggestion? MAIL IT HERE<br />
         got a misbehaving user? MAIL IT HERE!<br />
       </p>
       <textarea
