🐮🍱 Checkpoint ./public/index.html:65718371/431 ./public/static/textwall.css:65718371/41707 ./public/static/textwall.js:65718371/72

--- a/public/index.html
+++ b/public/index.html
@@ -663,6 +663,9 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
 				<div class="separator"></div>
       
 	
+				<div id="home" title="Home" class="tool enabled">
+					<img alt="home" src="/static/home.svg">
+				</div>
 				<div id="options" title="Options" class="tool enabled">
 					<img alt="options" src="/static/settings.svg">
 				</div>
@@ -688,8 +691,11 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         </div>
 	
 				<div class="separator"></div>
-          <div id="goto" title="Teleport" class="infobtn">
-          <img alt="↗" src="/static/go.svg">
+        <div id="goto" title="Teleport" class="infobtn">
+          <img alt="goto" src="/static/go.svg">
+        </div>
+        <div id="theme" title="Theme" class="infobtn">
+          <img id="themeico" alt="☀" src="/static/sun.svg">
         </div>
         <div
           id="owner"
