🌌🐑 Checkpoint ./public/static/textwall.css:65718371/891 ./public/static/textwall.js:65718371/410 ./public/index.html:65718371/18 ./public/static/undo.svg:65718371/860 ./public/static/redo.svg:65718371/287

--- a/public/index.html
+++ b/public/index.html
@@ -653,10 +653,10 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
 	
 				<div class="separator"></div>
 	
-				<div id="undo" title="Undo" class="tool disabled">
+				<div id="undo" title="Undo" class="tool">
 					<img alt="undo" src="/static/undo.svg">
 				</div>
-				<div id="redo" title="Redo" class="tool disabled">
+				<div id="redo" title="Redo" class="tool">
 					<img alt="redo" src="/static/redo.svg">
 				</div>
 	
