🚖🏪 Checkpoint ./public/static/textwall.js:65718371/665 ./public/index.html:65718371/25

--- a/public/index.html
+++ b/public/index.html
@@ -635,7 +635,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
     <canvas touch-action="none" id="canvas"></canvas>
     <div id="info">
       <div class="infotext">
-        <span id="nearby">0 people</span>
+        <span id="nearby">No one here</span>
         <span id="coords">0X, 0Y</span>
       </div>
       
