💷💧 Checkpoint ./public/static/textwall.css:65718371/1399 ./public/index.html:65718371/899

--- a/public/index.html
+++ b/public/index.html
@@ -638,9 +638,22 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         <span id="nearby">No one here</span>
         <span id="coords">0X, 0Y</span>
       </div>
-      
     <div class="toolbar-container">
       <div class="colours toolbar">
+        <div class="colourtabs">
+          <div id="monocolor" class="colourtab">
+            Mono
+          </div>
+          <div id="lightcolor" class="colourtab">
+            Light
+          </div>
+          <div id="normalcolor" class="colourtab">
+            Normal
+          </div>
+          <div id="darkcolor" class="colourtab">
+            Dark
+          </div>
+        </div>
         <div id="colourlist" class="small-scrollbar"></div>
     </div>
     <div id="toollist" class="tools toolbar small-scrollbar">
