🐛🍶 Checkpoint ./public/static/textwall.css:65718371/266 ./public/index.html:65718371/210 ./public/static/textwall.js:65718371/216

--- a/public/index.html
+++ b/public/index.html
@@ -640,7 +640,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
       </div>
     <div class="toolbar-container">
       <div class="colours toolbar">
-        <div class="colourtabs">
+        <div class="colourtabs tabs">
           <div id="monocolor" class="colourtab">
             Mono
           </div>
@@ -654,7 +654,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
             Dark
           </div>
         </div>
-        <div id="colourlist" class="small-scrollbar"></div>
+        <div id="colourlist" class="small-scrollbar colourlist"></div>
     </div>
     <div id="toollist" class="tools toolbar small-scrollbar">
 				<div id="copy" title="Copy" class="tool">
