📼💼 Checkpoint ./public/index.html:65718371/160 ./public/static/textwall.js:65718371/1465

--- a/public/index.html
+++ b/public/index.html
@@ -657,48 +657,48 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         <div id="colourlist" class="small-scrollbar colourlist"></div>
     </div>
     <div id="toollist" class="tools toolbar small-scrollbar">
-				<div id="copy" title="Copy" class="tool">
+				<div id="copy" title="Copy" class="tool infobtn">
 					<img id="copyico" alt="copy" src="/static/copy.svg">
 				</div>
-				<div id="paste" title="Paste" class="tool">
+				<div id="paste" title="Paste" class="tool infobtn">
 					<img id="pasteico" alt="paste" src="/static/paste.svg">
 				</div>
 	
 				<div class="separator"></div>
 	
-				<div id="undo" title="Undo" class="tool">
+				<div id="undo" title="Undo" class="tool infobtn">
 					<img alt="undo" src="/static/undo.svg">
 				</div>
-				<div id="redo" title="Redo" class="tool">
+				<div id="redo" title="Redo" class="tool infobtn">
 					<img alt="redo" src="/static/redo.svg">
 				</div>
 	
 				<div class="separator"></div>
       
 	
-				<div id="home" title="Home" class="tool enabled">
+				<div id="home" title="Home" class="tool infobtn enabled">
 					<img alt="home" src="/static/home.svg">
 				</div>
-				<div id="options" title="Options" class="tool enabled">
+				<div id="options" title="Options" class="tool infobtn enabled">
 					<img alt="options" src="/static/settings.svg">
 				</div>
-				<div id="openmenu" title="Colours" class="tool enabled">
+				<div id="openmenu" title="Colours" class="tool infobtn enabled">
 					<img alt="colour" src="/static/palette.svg">
 				</div>
 				<div id="decorations">
-          <div id="bold" title="Bold" class="tool">
+          <div id="bold" title="Bold" class="tool infobtn">
 					<img alt="bold" src="/static/bold.svg">
 				</div>
-				<div id="italic" title="Italic" class="tool">
+				<div id="italic" title="Italic" class="tool infobtn">
 					<img alt="italic" src="/static/italic.svg">
 				</div>
-				<div id="underline" title="Underline" class="tool">
+				<div id="underline" title="Underline" class="tool infobtn">
 					<img alt="underline" src="/static/underline.svg">
 				</div>
-				<div id="overline" title="Overline" class="tool">
+				<div id="overline" title="Overline" class="tool infobtn">
 					<img alt="overline" src="/static/overline.svg">
 				</div>
-				<div id="strikethrough" title="Strikethrough" class="tool">
+				<div id="strikethrough" title="Strikethrough" class="tool infobtn">
 					<img alt="strikethrough" src="/static/strikethrough.svg">
 				</div>
         </div>
