🐄🚝 Checkpoint ./public/index.html:65718371/219 ./public/static/textwall.css:65718371/618

--- a/public/index.html
+++ b/public/index.html
@@ -610,8 +610,10 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
       </div>
       <div class="sidething">
         <div id="closemenu">
-          <img alt="cancel" src="/static/cancel.svg" />
-        </div>
+						<svg height="12" width="6">
+							<polygon points="0,6 6,0 6,12"></polygon>
+						</svg>
+					</div>
       </div>
     </div>
     <div id="connecting">
