--- a/public/index.html
+++ b/public/index.html
@@ -597,14 +597,7 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
             value="💨"
           /><br />
           <table id="admintable">
-            <button onclick="
-            let userMute = prompt(&quot;What user would you mute?&quot;)
-            let muteDuration = parseInt(prompt(&quot;For how long?&quot;))
-            if (userMute === client.id) addChat(&quot;[SYSTEM]&quot;, 0b101, &quot;Why mute yourself?&quot;, true, 0)
-            if (muteDuration > 0) addChat(&quot;[SYSTEM]&quot;, 0b101, &quot;Muted &quot; + userMute + &quot; for &quot; + muteDuration + &quot; seconds.&quot;, true, 0)
-                             " id="mute">
-              Mute
-            </button>
+            yeah uhhh idk what else to add
           </table>
         </div>
       </div>
