--- a/public/maintenance.html
+++ b/public/maintenance.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
-  <meta property="og:title" content="Uni's TextWall" />
+  <meta property="og:title" content="RichardWall Maintenance" />
   <meta property="og:type" content="website" />
   <meta
     property="og:description"
-    content="The site is currently down... Sorry!"
+    content="We're making new things."
   />
   <meta property="og:url" content="https://unitextwall.glitch.me/" />
 
@@ -17,7 +17,7 @@
     sizes="80x80"
     href="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/down%20web%20icon.png?v=1705589045674"
   />
-  <title>Uni's TextWall is down</title>
+  <title>RichardWall Maintenance</title>
   <style>
     body {
       background-image: url("https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/maintenance_bg.png?v=1744408112909");
@@ -39,7 +39,7 @@
   </style>
 </head>
 <body>
-  <span>Uni's TextWall is currently under maintenance.</span>
+  <span>RichardWall is currently under maintenance.</span>
   <span>We're making new things...</span><br />
   <audio
     src="https://cdn.glitch.global/2c724c57-2f3d-4ea6-b456-e15fa098a60e/cqd6i7.mp3"
