😹🐛 Checkpoint ./.glitch-assets:65718371/431 ./public/static/textwall.css:65718371/111 ./public/index.html:65718371/2319

--- a/public/index.html
+++ b/public/index.html
@@ -645,15 +645,30 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
 				<div class="separator"></div>
       
 	
-				<div id="home" title="Home" class="tool infobtn enabled">
+				<div id="home" title="Home" class="tool infobtn">
 					<img alt="home" src="/static/home.svg">
 				</div>
-				<div id="options" title="Options" class="tool infobtn enabled">
+				<div id="options" title="Options" class="tool infobtn">
 					<img alt="options" src="/static/settings.svg">
 				</div>
-				<div id="openmenu" title="Colours" class="tool infobtn enabled">
+				<div id="openmenu" title="Colours" class="tool infobtn">
 					<img alt="colour" src="/static/palette.svg">
 				</div>
+        <div id="goto" title="Teleport" class="infobtn">
+          <img alt="goto" src="/static/go.svg">
+        </div>
+        <div id="theme" title="Theme" class="infobtn">
+          <img id="themeico" alt="☀" src="/static/sun.svg">
+        </div>
+        <div
+          id="owner"
+          title="This user is the owner of RichardWall."
+          class="infobtn"
+          style="display: none"
+        >
+          <img alt="👑" src="/static/crown.png" />
+				<div class="separator"></div>
+      
 				<div id="decorations">
           <div id="bold" title="Bold" class="tool infobtn">
 					<img alt="bold" src="/static/bold.svg">
@@ -671,21 +686,6 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
 					<img alt="strikethrough" src="/static/strikethrough.svg">
 				</div>
         </div>
-	
-				<div class="separator"></div>
-        <div id="goto" title="Teleport" class="infobtn">
-          <img alt="goto" src="/static/go.svg">
-        </div>
-        <div id="theme" title="Theme" class="infobtn">
-          <img id="themeico" alt="☀" src="/static/sun.svg">
-        </div>
-        <div
-          id="owner"
-          title="This user is the owner of RichardWall."
-          class="infobtn"
-          style="display: none"
-        >
-          <img alt="👑" src="/static/crown.png" />
 				</div>
 			</div>
     </div>
