🌽💃 Checkpoint ./public/static/textwall.js:65718371/487 ./public/index.html:65718371/869

--- a/public/index.html
+++ b/public/index.html
@@ -150,12 +150,6 @@
       </div>
     </div>
     <div id="chat" class="hidden">
-      <div class="buttoncontainer">
-        <div id="chatbutton">
-          <img alt="chat" class="button" src="/static/chat.svg" />
-          <div id="unread"></div>
-        </div>
-      </div>
       <div class="chatcontainer">
         <div id="chatbox"><hr></div>
         <div class="msgcontainer">
@@ -632,25 +626,25 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
 				<div id="paste" title="Paste" class="tool infobtn">
 					<img id="pasteico" alt="paste" src="/static/paste.svg">
 				</div>
-	
-				<div class="separator"></div>
-	
 				<div id="undo" title="Undo" class="tool infobtn">
 					<img alt="undo" src="/static/undo.svg">
 				</div>
 				<div id="redo" title="Redo" class="tool infobtn">
 					<img alt="redo" src="/static/redo.svg">
 				</div>
+				<div class="separator"></div>
 				<div id="home" title="Home" class="tool infobtn">
 					<img alt="home" src="/static/home.svg">
 				</div>
 				<div id="options" title="Options" class="tool infobtn">
 					<img alt="options" src="/static/settings.svg">
 				</div>
-				<div id="openmenu" title="Colours" class="tool infobtn">
+				<div id="openmenu" title="Colors" class="tool infobtn">
 					<img alt="colour" src="/static/palette.svg">
 				</div>
-	
+	      <div id="chatbutton" title="Chat" class="tool infobtn">
+          <img alt="chat" class="button" src="/static/chat.svg" />
+        </div>
         <div id="goto" title="Teleport" class="infobtn">
           <img alt="goto" src="/static/go.svg">
         </div>
