🍁⛹ Checkpoint ./public/static/textwall.css:65718371/210 ./public/static/home.svg:65718371/2153 ./public/static/go.svg:65718371/457 ./public/static/explore.svg:65718371/633 ./public/static/settings.svg:65718371/1825 ./public/static/palette.svg:65718371/1132 ./public/static/chat.svg:65718371/654 ./public/index.html:65718371/32 ./public/static/textwall.js:65718371/232

--- a/public/index.html
+++ b/public/index.html
@@ -645,10 +645,10 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
 	      <div id="chatbutton" title="Chat" class="tool infobtn">
           <img alt="chat" class="button" src="/static/chat.svg" />
         </div>
-        <div id="goto" title="Teleport" class="infobtn">
-          <img alt="goto" src="/static/go.svg">
+        <div id="goto" title="Teleport" class="tool infobtn">
+          <img alt="goto" src="/static/explore.svg">
         </div>
-        <div id="theme" title="Theme" class="infobtn">
+        <div id="theme" title="Theme" class="tool infobtn">
           <img id="themeico" alt="☀" src="/static/sun.svg">
         </div>
         <div
@@ -681,7 +681,6 @@ document.getElementById(&quot;eruda&quot;).disabled = true;
         </div>
 				</div>
 			</div>
-    </div>
     </div>
     <script src="/static/colors.js"></script>
     <script src="/static/pep.min.js"></script>
